--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "TronWallet",
-  "description": "Your First Smart Digital Tron Wallet",
-  "version": "0.0.1",
+  "description": "年轻人真正意义上的第一个波场chrome数字钱包~",
+  "version": "0.0.3",
   "icons": {
     "16": "static/imgs/tron.png",
     "48": "static/imgs/tron.png",
@@ -11,12 +11,6 @@
   "browser_action": {
     "default_icon": "static/imgs/tron.png",
     "default_popup": "index.html"
-  },
-  "background": {
-    "persistent": true,
-    "scripts": [
-      "static/js/jquery.min.js"
-    ]
   },
   "externally_connectable": {
     "matches": [
